# micro-openapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md
examples/flask-sync/: requirements.txt
examples/flask-sync/src/app/: main.py  openapi.py
examples/flask-sync/src/app/business/: hateoas.py  pagination.py  table_defs.py
examples/flask-sync/src/app/endpoints/: greeting.py  greeting_repository.py
src/microapi/: __init__.py  extension.py
