[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MicroAPI"
version = "0.0.1"
authors = [
  { name="Justin Dekeyser", email="justin.dekeyser@gmail.com" },
]
description = "Micro OpenAPI support"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/Judekeyser/micro-openapi"